router/x28/backup/rollback-20260825-2011/state/iptables.save
# Generated by iptables-save v1.8.3 on Tue Aug 25 20:41:24 2026
*nat
:PREROUTING ACCEPT [17162:1516642]
:INPUT ACCEPT [17357:1026004]
:OUTPUT ACCEPT [130122:7860936]
:POSTROUTING ACCEPT [123532:7423668]
:X28_SPLIT - [0:0]
:postrouting_mdl_chain - [0:0]
:prerouting_mdl_chain - [0:0]
-A PREROUTING -j prerouting_mdl_chain
-A PREROUTING -i br0 -j X28_SPLIT
-A POSTROUTING -j postrouting_mdl_chain
-A X28_SPLIT -d 185.137.27.122/32 -j RETURN
-A X28_SPLIT -d 192.168.70.0/24 -j RETURN
-A X28_SPLIT -p tcp -j REDIRECT --to-ports 12345
-A postrouting_mdl_chain -o ccmni1 -j MASQUERADE
-A postrouting_mdl_chain -o ccmni2 -j MASQUERADE
COMMIT
# Completed on Tue Aug 25 20:41:24 2026
# Generated by iptables-save v1.8.3 on Tue Aug 25 20:41:24 2026
*raw
:PREROUTING ACCEPT [5794533:5423148478]
:OUTPUT ACCEPT [2871351:4400059772]
COMMIT
# Completed on Tue Aug 25 20:41:24 2026
# Generated by iptables-save v1.8.3 on Tue Aug 25 20:41:24 2026
*mangle
:PREROUTING ACCEPT [5777558:5408134464]
:INPUT ACCEPT [5770949:5407243296]
:FORWARD ACCEPT [3215:329067]
:OUTPUT ACCEPT [2860202:4394831520]
:POSTROUTING ACCEPT [2863336:4395157181]
:X28_NOQUIC - [0:0]
:qos_Default - [0:0]
:qos_Default_ct - [0:0]
-A PREROUTING -i br0 -j X28_NOQUIC
-A X28_NOQUIC -p udp -m udp --dport 443 -j DROP
-A qos_Default -j CONNMARK --restore-mark --nfmask 0xf --ctmask 0xf
-A qos_Default -m mark --mark 0x0/0xf -j qos_Default_ct
-A qos_Default -p udp -m mark --mark 0x0/0xf0 -m length --length 0:500 -j MARK --set-xmark 0x22/0xff
-A qos_Default -p icmp -j MARK --set-xmark 0x11/0xff
-A qos_Default -p tcp -m mark --mark 0x0/0xf0 -m tcp --sport 1024:65535 --dport 1024:65535 -j MARK --set-xmark 0x44/0xff
-A qos_Default -p udp -m mark --mark 0x0/0xf0 -m udp --sport 1024:65535 --dport 1024:65535 -j MARK --set-xmark 0x44/0xff
-A qos_Default -j CONNMARK --save-mark --nfmask 0xff --ctmask 0xff
-A qos_Default_ct -p tcp -m mark --mark 0x0/0xf -m tcp -m multiport --ports 22,53 -m comment --comment "ssh, dns" -j MARK --set-xmark 0x11/0xff
-A qos_Default_ct -p udp -m mark --mark 0x0/0xf -m udp -m multiport --ports 22,53 -m comment --comment "ssh, dns" -j MARK --set-xmark 0x11/0xff
-A qos_Default_ct -p tcp -m mark --mark 0x0/0xf -m tcp -m multiport --ports 20,21,25,80,110,443,993,995 -m comment --comment "ftp, smtp, http(s), imap" -j MARK --set-xmark 0x33/0xff
-A qos_Default_ct -p tcp -m mark --mark 0x0/0xf -m tcp -m multiport --ports 5190 -m comment --comment "AOL, iChat, ICQ" -j MARK --set-xmark 0x22/0xff
-A qos_Default_ct -p udp -m mark --mark 0x0/0xf -m udp -m multiport --ports 5190 -m comment --comment "AOL, iChat, ICQ" -j MARK --set-xmark 0x22/0xff
-A qos_Default_ct -j CONNMARK --save-mark --nfmask 0xff --ctmask 0xff
COMMIT
# Completed on Tue Aug 25 20:41:24 2026
# Generated by iptables-save v1.8.3 on Tue Aug 25 20:41:24 2026
*filter
:INPUT ACCEPT [5782166:5415700953]
:FORWARD ACCEPT [3132:324931]
:OUTPUT ACCEPT [2870699:4400013413]
:X28_MGMT - [0:0]
:ack-flood - [0:0]
:ddos_ack_chain - [0:0]
:ddos_syn_chain - [0:0]
:flow - [0:0]
:forward_mdl_chain - [0:0]
:input_mdl_chain - [0:0]
:output_mdl_chain - [0:0]
:parental_forward_mdl_chain - [0:0]
:parental_input_mdl_chain - [0:0]
:syn-flood - [0:0]
-A INPUT -j parental_input_mdl_chain
-A INPUT -j input_mdl_chain
-A INPUT -p tcp -m multiport --dports 22,23,2017 -j X28_MGMT
-A INPUT -j ddos_syn_chain
-A INPUT -j ddos_ack_chain
-A FORWARD -j parental_forward_mdl_chain
-A FORWARD -j forward_mdl_chain
-A FORWARD -j flow
-A OUTPUT -j output_mdl_chain
-A X28_MGMT -i lo -j RETURN
-A X28_MGMT -s 192.168.70.0/24 -j RETURN
-A X28_MGMT -j DROP
-A ack-flood -m connlimit --connlimit-above 10 --connlimit-mask 32 --connlimit-saddr -j REJECT --reject-with icmp-port-unreachable
-A ddos_ack_chain -p tcp -m multiport --dports 80,443 -m tcp --tcp-flags FIN,SYN,RST,ACK ACK -j ack-flood
-A ddos_syn_chain -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn-flood
-A forward_mdl_chain -i br0 -p tcp -m conntrack --ctstate INVALID -j DROP
-A forward_mdl_chain -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A input_mdl_chain -i ccmni1 -p tcp -m tcp --dport 22 -j DROP
-A input_mdl_chain -i ccmni1 -p tcp -m tcp --dport 80 -j DROP
-A input_mdl_chain -i ccmni1 -p tcp -m tcp --dport 443 -j DROP
-A input_mdl_chain -i ccmni1 -p icmp -m icmp --icmp-type 8 -j DROP
-A syn-flood -m limit --limit 12/sec --limit-burst 24 -j RETURN
COMMIT
# Completed on Tue Aug 25 20:41:24 2026
